Grace/tests/gibbs/errors/t183.grace
// ERROR = P1002
dialect
print "something"
